<resources>
    <string name="app_name">HomeFixers</string>
    <string name="button_text_register_user">Зарегестрироваться</string>
    <string name="button_text_sign_in_user">Войти как пользователь</string>
    <string name="qustion_employees_text">Вы хотите оказывать услуги?</string>
    <string name="singin_no_register">Войти без регистрации</string>
    <string name="register_executor">Зарегестрироваться как исполнитель</string>
    <string name="signin_executor">Войти как исполнитель</string>
    <string name="text_reg_in_register_user_activity">Регистрация</string>
    <string name="hint_text_name">Имя:</string>
    <string name="hint_text_email">Email:</string>
    <string name="hint_text_password">Пароль:</string>
    <string name="hint_text_phone">Номер телефона:</string>
    <string name="hint_text_city">Город:</string>
    <string name="start_item_menu">Начало</string>
    <string name="text_help">Помощь</string>
    <string name="text_logout">Выход</string>
    <string name="text_personal_cabinet">Личный кабинет</string>
    <string name="text_change_password">Поменять пароль</string>
    <string name="signin_account_text">Вход в аккаунт</string>
    <string name="text_login_forgot_password">Восстановить пароль</string>
    <string name="forgot_password_text">Восстановление пароля</string>
    <string name="forgot_text">Восстановить</string>
    <string name="text_reg_in_register_executor_activity">Регистрация как исполнитель</string>
    <string name="text_choice_specialization">Выберите вашу специализацию</string>
    <string name="text_reg_executor_description">Опишите себя и ваши услуги</string>
    <string name="text_hint_about_us">О себе:</string>
    <string name="text_hint_executor_price">Цена руб/час:</string>
    <string name="text_executor_experience">Ваш опыт работы</string>
    <string name="text_executor_contract">Работаете по договору</string>
    <string name="text_executor_guarantee">Есть ли гарантия на ваши услуги</string>
    <string name="text_executor_urgency">Срочные заказы</string>
    <string name="signin_account_executor_text">Вход в акаунт как исполнитель</string>
    <string name="text_hint_forgot_password">Для того чтобы востановить пароль, напишите ваш email в форме ниже.</string>
    <string name="item_menu_text_order_executor">Мои заказы</string>
    <string name="text_menu_main_activity">На страницу входа в систему</string>
    <string name="button_text_register_executor">Зарегестрироваться как исполнитель</string>
    <string name="text_menu_register_user">Зарегестрироваться как пользователь</string>
    <string name="text_menu_login_user">Войти как пользователь</string>
    <string name="text_menu_login_executor">Войти как исполнитель</string>
    <string name="text_item_register_executor">Зарегестрироваться как исполнитель</string>
    <string name="text_item_login_executor">Войти как исполнитель</string>
    <string name="button_login_text">Войти</string>
    <string name="text_link_telegram">Написать в Telegram</string>
    <string name="text_link_vk">Написать в VK</string>
    <string name="text_title_person_account">Ваш личный кабинет</string>
    <string name="text_update_photo_person_account">Изменить фото</string>
    <string name="text_hint_your_name">Ваше имя: %s</string>
    <string name="text_hint_your_email">Ваш email: %s</string>
    <string name="text_hint_your_city">Ваш город: %s</string>
    <string name="text_hint_your_number_phone">Ваш номер телефона: %s</string>
    <string name="text_update_info_person_account">Изменить информацию</string>
    <string name="text_delete_person_account">Удалить аккаунт</string>
    <string name="button_text_download_photo_user">Установить фото профиля</string>
    <string name="title_change_info_user">Изменение информации вашего профиля</string>
    <string name="hint_change_name">Ваше имя:</string>
    <string name="hint_change_email">Ваш email:</string>
    <string name="hint_change_city">Ваш город:</string>
    <string name="hint_change_phone">Ваш номер телефона:</string>
    <string name="button_text_change_info_user">Изменить</string>

    <array name="array_specialization">
        <item>Сантехник</item>
        <item>Электрик</item>
        <item>Компьютерный мастер</item>
        <item>Муж на час</item>
        <item>Грузчик</item>
        <item>Садовый мастер</item>
        <item>Каменщик</item>
        <item>Сборщик мебели</item>
        <item>Разнорабочий</item>
        <item>Монтажник систем вентиляции и кондиционирования</item>
        <item>Уборщик</item>
        <item>Мастер на все руки</item>
    </array>

    <array name="array_experience">
        <item>Без опыта</item>
        <item>Меньше 1 года</item>
        <item>1 год</item>
        <item>3 года</item>
        <item>Больше 5 лет</item>
        <item>Меньше 10 лет</item>
        <item>Больше 10 лет</item>
    </array>

    <array name="array_contract">
        <item>Да</item>
        <item>Нет</item>
    </array>

    <array name="array_guarantee">
        <item>С гарантией</item>
        <item>Без гарантии</item>
    </array>

    <array name="array_urgency">
        <item>Да</item>
        <item>Нет</item>
    </array>
</resources>