<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first_main_color"
    tools:context=".PersonalAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titlePersonalAccountUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_title_person_account"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNamePersonalAccountUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="30dp"
            android:text="@string/text_hint_your_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePersonalAccountUser" />

        <TextView
            android:id="@+id/textEmailPersonalAccountUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:text="@string/text_hint_your_email"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNamePersonalAccountUser" />

        <TextView
            android:id="@+id/textCityPersonalAccountUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:text="@string/text_hint_your_city"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmailPersonalAccountUser" />

        <TextView
            android:id="@+id/textPhonePersonalAccountUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:text="@string/text_hint_your_number_phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCityPersonalAccountUser" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonChangeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_btn_4"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/text_update_info_person_account"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPhonePersonalAccountUser" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/buttonChangeInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/text_delete_person_account"
            android:background="@drawable/background_btn_5"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>