<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordExecutorActivity">

    <TextView
        android:id="@+id/textViewForgotPasswordExecutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/first_main_color"
        android:textSize="28sp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textViewForgotPasswordExecutorExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_hint_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordExecutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#9E808080"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/editTextForgotPasswordExecutorEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_text_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordExecutorExplanation" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonForgotPasswordExecutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_text"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_btn_2"
        android:textAllCaps="true"
        android:textColor="@color/first_main_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextForgotPasswordExecutorEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>